--- a/.env
+++ b/.env
@@ -6,3 +6,10 @@ DB_USERNAME=user
 DB_PASSWORD=pass
 
 DATABASE_URL=mysql://user:password@database:3306/mydatabase?serverVersion=5.7.22
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=442e172333d98fd982d43376e49474f0
+###< lexik/jwt-authentication-bundle ###
+
+
