--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ vendor
 node_modules
 var
 ###< symfony/webpack-encore-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
