--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
     "devDependencies": {
         "@symfony/stimulus-bridge": "^2.0.0",
         "@symfony/webpack-encore": "^1.0.0",
+        "@vue/compiler-sfc": "^3.2.20",
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
         "stimulus": "^2.0.0",
+        "vue-loader": "^16.1.0",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
@@ -14,5 +16,15 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "autoprefixer": "^10.4.0",
+        "foundation-sites": "^6.7.3",
+        "postcss-import": "^14.0.2",
+        "postcss-loader": "^6.2.0",
+        "tailwindcss": "^2.2.19",
+        "vue": "^3.2.20",
+        "vue-router": "^4.0.12",
+        "vuex": "^4.0.2"
     }
 }
